# cloud-agent-service

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile.agent  Dockerfile.api  EVALUATION.md  Outline.txt  README.md  compose.yaml  demo.sh  llm.txt  pyproject.toml  requirements.txt
cloud_agent_service/: __init__.py  analysis_lab.py  app.py  artifact_schema.py  artifact_store.py  callback_auth.py  cloud_dispatch.py  cutover.py  database.py  dataset_export.py  deployment.py  event_ingest.py  execution.py  forge.py  harness_adapters.py  harness_registry.py  lab_router.py  lab_warehouse.py  models.py  orchestrator.py  pipeline.py  provenance.py  readiness.py  security_profiles.py  store.py  task_corpus.py  worker.py
docs/: sota-feature-readiness.md
examples/: agent_contract.json
scripts/: demo_lab_in_a_box.py  demo_local_flow.py  doctor.py  evaluate_mvp.py  evaluate_task_suite.py  export_slm_dataset.py  install_allowed_modules.sh  rehearse_cutover.py  smoke_api.py
tests/: test_cloud_agent_service_flow.py  test_project_artifacts.py
